--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,14 +1,19 @@
 <div class="flex h-screen w-screen overflow-hidden box-border">
-  <app-sidenav class="fixed ml-5"></app-sidenav>
+  <button 
+    class="md:hidden fixed top-4 left-4 z-50 bg-sky-950 text-white p-2 rounded-lg"
+    (click)="sidebarService.toggleMenu()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <app-sidenav class="fixed ml-5 z-50 top-0"></app-sidenav>
 
-  <div class="flex-grow ml-[250px] mt-5 flex flex-col h-screen min-w-[300px] overflow-y-auto">
+  <div class="flex-grow mt-16 h-[calc(100vh-3.5rem)] md:ml-[250px]  md:mt-5 flex flex-col md:h-screen min-w-[300px] overflow-y-auto">
     <!-- Header + Título (que se desplaza con el scroll) -->
     <div class="flex ml-5 w-full">
       <h1 class="text-3xl font-bold text-gray-800 mr-auto">{{ pageTitle }}</h1>
       <app-header class="flex items-center justify-end mr-5 flex-grow w-full"></app-header>
     </div>
     
-    <div class="flex-grow p-5 min-w-[300px] w-full">
+    <div class="flex-grow p-5 min-w-[300px] w-full relative">
       <!-- Spinner con clase overlay -->
       <div *ngIf="loading" class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-white/80 z-10 text-[#082F49]">
         <mat-spinner></mat-spinner>
