--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -11,7 +11,7 @@
       <div class="relative  mb-4 search-container">
         <input 
           type="text" 
-          placeholder="Buscar productos..." 
+          placeholder="Buscar facturas..." 
           [(ngModel)]="searchTerm"
           (input)="filterProducts()"
           (click)="showOptions = true"
@@ -33,7 +33,14 @@
       <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
         <tr class="bg-gray-200 text-center">
-          <th class="px-4 py-2 "><input id="vue-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"></th>
+          <th class="px-4 py-2 ">
+            <input id="vue-checkbox" 
+            type="checkbox"
+            [checked]="selectAllChecked()"
+            (change)="selectAll($event)" 
+            value="" 
+            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
+          </th>
           <th class="px-4 py-2 ">Número Factura</th>
           <th class="px-4 py-2 ">Nombre Cliente</th>
           <th class="px-4 py-2 ">Total Factura</th>
@@ -49,6 +56,8 @@
           <td class="px-4 py-2">
             <input
               type="checkbox"
+              #checkInvoice
+              id="check-invoice"
               [checked]="isSelected(invoice)"
               (change)="toggleSelection(invoice)"
               [value]="invoice.idFactura"
