--- a/src/app/shared/sidenav/sidenav.component.css
+++ b/src/app/shared/sidenav/sidenav.component.css
@@ -1,15 +1,15 @@
-.sidebar {
+/* .sidebar {
     position: sticky;
     left: 10px;
     height: 95vh;
     width: 230px;
     border-radius: 20px;
-    /* background-color: #3f51b5; */
-    /* color: white; */
+    /* background-color: #3f51b5; 
+    /* color: white; 
     overflow: hidden;
     transition: width 0.3s, padding 0.3s;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  }
+  } */
 
   .sidebar.open {
     width: 60px;
@@ -101,9 +101,36 @@
       color: #38bdf8; /* Cambiar color del ícono al hacer hover */
   }
 
-  @media (max-width: 480px) {
+  /* @media (max-width: 480px) {
     .sidebar {
       height: 100%;
       width: 100vw;
-    }
+    } 
+  }*/
+
+  @media (min-width: 768px) {
+  .sidebar {
+    position: sticky;
+    left: 10px;
+    height: 95vh;
+    width: 230px;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: width 0.3s, padding 0.3s;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   }
+}
+
+/* Para pantallas pequeñas */
+@media (max-width: 767px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    background-color: #082f49; /* mismo bg-sky-950 */
+    overflow-y: auto;
+  }
+}
