Correcciones componente sale y ajustes generales

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -14,7 +14,7 @@
         (input)="filterProducts()"
       />
 
-      <button mat-flat-button class="AgregarProd" (click)="openAddProductDialog()">Agregar Producto</button>
+      <button mat-flat-button class="AgregarProd" (click)="openAddProductComponent()">Agregar Producto</button>
       <mat-divider></mat-divider>
     <div class="products-content grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" *ngIf="content == false">
       <!-- Lista de productos -->
