--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -22,28 +22,28 @@
       <mat-icon>close</mat-icon>
     </button>
     <ul class="mt-6 space-y-3">
-      <li>
+      <!-- <li>
           <a routerLink="/dashboard/home" routerLinkActive="text-sky-500" (click)="closeMenuOnMobile()" class="flex items-center">
             <mat-icon class="icon" routerLinkActive="text-sky-500">dashboard</mat-icon>
             <span class="ml-2" routerLinkActive="text-sky-500">Inicio</span>
+          </a>
+        </li> -->
+        <li>
+          <a routerLink="/dashboard/sale" routerLinkActive="text-sky-500" (click)="closeMenuOnMobile()" class="flex items-center">
+            <mat-icon class="icon" routerLinkActive="text-sky-500">point_of_sale</mat-icon>
+            <span class="ml-2" routerLinkActive="text-sky-500">Realizar Venta</span>
           </a>
         </li>
         <li>
           <a routerLink="/dashboard/products" routerLinkActive="text-sky-500" (click)="closeMenuOnMobile()" class="flex items-center">
             <mat-icon class="icon" routerLinkActive="text-sky-500">inventory_2</mat-icon>
-            <span class="ml-2" routerLinkActive="text-sky-500">Agregar Productos</span>
+            <span class="ml-2" routerLinkActive="text-sky-500">Administrar Productos</span>
           </a>
         </li>
         <li>
           <a routerLink="/dashboard/register"routerLinkActive="text-sky-500" (click)="closeMenuOnMobile()" class="flex items-center">
             <mat-icon class="icon" routerLinkActive="text-sky-500">person_add</mat-icon>
             <span class="ml-2" routerLinkActive="text-sky-500">Registrar Usuarios</span>
-          </a>
-        </li>
-        <li>
-          <a routerLink="/dashboard/sale" routerLinkActive="text-sky-500" (click)="closeMenuOnMobile()" class="flex items-center">
-            <mat-icon class="icon" routerLinkActive="text-sky-500">point_of_sale</mat-icon>
-            <span class="ml-2" routerLinkActive="text-sky-500">Realizar Venta</span>
           </a>
         </li>
         <li>
