Maquetacion inicial de variantes

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -8,8 +8,8 @@
 
   <div class="flex-grow mt-16 h-[calc(100vh-3.5rem)] md:ml-[250px]  md:mt-5 flex flex-col md:h-screen min-w-[300px] overflow-y-auto">
     <!-- Header + Título (que se desplaza con el scroll) -->
-    <div class="flex ml-5 w-full">
-      <h1 class="text-3xl font-bold text-gray-800 mr-auto">{{ pageTitle }}</h1>
+    <div class="flex w-full">
+      <h1 class="text-3xl font-bold text-gray-800 mr-auto ml-10">{{ pageTitle }}</h1>
       <app-header class="flex items-center justify-end mr-5 flex-grow w-full"></app-header>
     </div>
     
