--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -65,7 +65,7 @@
 
             <li>
               <a
-                routerLink="/dashboard/products/list"
+                routerLink="/dashboard/variants/"
                 routerLinkActive="text-sky-500"
                 (click)="closeMenuOnMobile()"
                 class="flex items-center"
