--- a/src/app/components/adm-variants/adm-variants.component.html
+++ b/src/app/components/adm-variants/adm-variants.component.html
@@ -1,10 +1,11 @@
-    <div class="col-span w-1/2 border rounded-md border-gray-600 shadow-lg shadow-gray-600 m-5 p-4">
+    <div class="flex justify-center items-center">
+      <div class="col-span w-1/2 border rounded-md border-gray-600 shadow-lg shadow-gray-600 m-5 p-4 items-center justify-center">
       <h3 class="text-lg font-semibold text-sky-900 mt-4 mb-2">Nueva Variante</h3>
 
       <form  [formGroup]="variantsForm" class="space-y-2">
         <div>
             <p>Nombre</p>
-            <input type="text" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4">
+            <input type="text" formControlName="name" class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4">
         </div>
 
         <div>
@@ -35,10 +36,20 @@
 
       <button
         type="button"
-        (click)="addVariant()"
+        (click)="addVariantValue()"
         class="mt-2 px-4 py-2 border border-blue-500 text-blue-500 rounded hover:bg-blue-50"
       >
-        + Agregar Variante
+        Agregar Variante
       </button>
+
+      <div class="flex justify-end mt-4">
+        <button type="button"
+          (click)="onSubmit()"
+          class="mt-2 px-4 py-2 border bg-blue-500 text-white rounded hover:bg-blue-50"
+        >
+          {{ isEditMode ? 'Actualizar Variante' : 'Guardar Variante' }}
+        </button>
+      </div>
       <p *ngIf="message" class="col-span-full text-red-600 mt-4">{{ message }}</p>
+    </div>
     </div>
