--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -1,5 +1,5 @@
 <div class="add-product-container p-6 mx-6 bg-white shadow-md rounded-lg">
-  <h2 class="text-xl font-bold mb-4">Agrega Tus Productos</h2>
+  <h2 class="text-xl font-bold mb-4">{{ isEditMode ? 'Editar Producto' : 'Agrega Tus Productos' }}</h2>
 
   <form
     [formGroup]="productForm"
@@ -65,8 +65,24 @@
       </span>
     </div>
 
+    @if (!this.hasVariants) {
+      <!-- Cantidad -->
+    <div class="flex flex-col">
+      <label class="font-semibold mb-1">Cantidad Disponible</label>
+      <input 
+        type="number" 
+        formControlName="stock" 
+        class="border rounded p-2 focus:ring focus:ring-blue-300"
+        placeholder="0"
+      />
+      <span class="text-red-500 text-sm" *ngIf="productForm.get('stock')?.invalid && productForm.get('stock')?.touched && !this.hasVariants">
+        La cantidad debe ser al menos 1
+      </span>
+    </div>
+    }
+
     <br />
-    <div class="col-span-full flex items-center mt-2">
+    <div class="col-span-full flex items-center mt-2" [class.pointer-events-none]="isEditMode" [class.opacity-50]="isEditMode">
       <label class="inline-flex items-center cursor-pointer">
         <input
           type="checkbox"
@@ -82,25 +98,44 @@
         >
       </label>
     </div>
-    <!-- Cantidad -->
-    <!-- <div class="flex flex-col">
-      <label class="font-semibold mb-1">Cantidad Disponible</label>
-      <input 
-        type="number" 
-        formControlName="quantity" 
-        class="border rounded p-2 focus:ring focus:ring-blue-300"
-        placeholder="0"
-      />
-      <span class="text-red-500 text-sm" *ngIf="productForm.get('quantity')?.invalid && productForm.get('quantity')?.touched">
-        La cantidad debe ser al menos 1
-      </span>
-    </div> -->
 
     <!-- Variantes -->
     <div class="col-span-full" *ngIf="hasVariants">
-      <h3 class="text-lg font-semibold mt-4 mb-2">Variantes</h3>
+      <h3 class="text-lg font-semibold mt-4 mb-2">Variantes disponibles</h3>
 
-      <div formArrayName="variants" class="space-y-2">
+      <!-- Variantes disponibles -->
+      <div class="mt-4">
+        <div class="flex flex-wrap gap-2">
+          @for (variant of variantsAvailable(); track variant.id) {
+            <button
+              type="button"
+              (click)="toggleVariant(variant)"
+              class="px-3 py-1.5 rounded-full border text-sm transition
+              hover:bg-blue-50 hover:border-blue-400
+              "
+              [ngClass]="{
+                'bg-blue-600 text-white border-blue-600':
+                  isVariantSelected(variant.id),
+                'bg-white text-gray-700 border-gray-300':
+                  !isVariantSelected(variant.id)
+              }"
+            >
+              {{ variant.name }}
+            </button>
+          }
+        </div>
+
+        <!-- Variante seleccionada -->
+        <div class="mt-3 text-sm text-gray-700">
+          <span class="font-semibold">Variantes seleccionadas:</span>
+          <span class="ml-1">
+            {{ getSelectedVariantsText() }}
+          </span>
+        </div>
+      </div>
+
+      @if (variants.length > 0) {
+        <div formArrayName="variants" class="space-y-2 rounded-lg border p-4 bg-gray-50">
         <div
           *ngFor="let variant of variants.controls; let i = index"
           [formGroupName]="i"
@@ -142,14 +177,15 @@
           </button>
         </div>
       </div>
+      }
 
-      <button
+      <!-- <button
         type="button"
         (click)="addVariant()"
         class="mt-2 px-4 py-2 border border-blue-500 text-blue-500 rounded hover:bg-blue-50"
       >
         + Agregar Variante
-      </button>
+      </button> -->
     </div>
     <p *ngIf="message" class="col-span-full text-red-600 mt-4">{{ message }}</p>
   </div>
@@ -165,20 +201,10 @@
       >
         <!-- Mostrar preview si existe -->
         <img
-          *ngIf="imagePreview; else defaultImage"
           [src]="imagePreview"
           alt="Imagen seleccionada"
           class="w-full h-full object-cover rounded-lg"
         />
-
-        <!-- Imagen por defecto -->
-        <ng-template #defaultImage>
-          <img
-            src="../../../assets/images/noProduct.png"
-            alt="Imagen por defecto"
-            class="w-full h-full object-cover"
-          />
-        </ng-template>
       </label>
       <input
         id="fileInput"
@@ -201,7 +227,7 @@
         type="submit"
         class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
       >
-        Agregar
+        {{ isEditMode ? 'Editar' : 'Agregar' }}
       </button>
     </div>
   </div>
