--- a/src/app/components/sale/sale.component.html
+++ b/src/app/components/sale/sale.component.html
@@ -1,10 +1,13 @@
 <div class="container mx-auto p-4 w-full h-full">
   <div class="main-content h-full" [class.menu-open]="isMenuOpen">
     <!-- Mensaje cuando no hay productos -->
-    <div class="emptyContent text-center" *ngIf="content == true">
+    <div class="emptyContent text-center overflow-auto" *ngIf="content == true">
       <h1 class="text-2xl font-bold mb-2">
         Aún no tienes productos para facturar
       </h1>
+      <h4 class="text-md font-bold mb-2">
+        Debes agregar almenos un producto
+      </h4>
     </div>
 
     <!-- Contenedor de productos -->
